# journiq

./: .gitignore  README.md  package-lock.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/users/: user.py  users_routes.py
backend/app/core/: config.py
backend/app/models/: item_schema.py  payment_schema.py  requests.py  schema.py  travel_plan_schema.py  user_schema.py
backend/app/models/users/: friend.py  friend_request.py  group.py  user.py
backend/app/routes/: api.py  test_api.py
backend/prisma/: README.md  schema.prisma
backend/prisma/migrations/20240721165607_init/: migration.sql
