[tool.poetry]
name = "journiq"
version = "0.1.0"
description = ""
authors = ["wayneuconn <wayne.uconn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
google-cloud-firestore = "^2.16.0"
websockets = "^12.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
